# Aegis

./: .env.example  .gitignore  README.md  compose.yaml
api/: Dockerfile  pyproject.toml
api/app/: anomaly.py  benchmark.py  db.py  email_report.py  main.py  models.py  openrouter.py
db/migrations/: 001_init.sql
docs/: api.md  architecture.md
seed/: seed.py
web/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json
web/src/: App.tsx  EmailReportModal.tsx  api.ts  icons.tsx  index.css  report.ts  ui.tsx
web/src/views/: Anomalies.tsx  Cost.tsx  Overview.tsx  Weekly.tsx
