[project]
name = "aegis-api"
version = "0.1.0"
description = "AEGIS — AI Enterprise Governance & Insight System (API)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "psycopg[binary,pool]>=3.2",
  "pydantic>=2.7",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "numpy>=2.0",
]
